--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     border: solid thin grey;
     padding: 10px;
     position: relative;
+    padding-bottom: 10px;
 }
 
 .newsletter button {
@@ -23,6 +24,7 @@
     display: block;
     width: 100%;
     height: 30px;
+    margin-bottom: 10px;
 }
 
 .newsletter input#email {
@@ -35,15 +37,21 @@
     border-radius: 3px;
     
     box-sizing: border-box;
-    
+
 }
-    .newsletter #closex{
+
+.newsletter h3 {
+    margin-top: 0;
+}
+
+.newsletter #closex{
     position: absolute;
     top: 0;
     right: 4px;
-
-
-
 }
 
+.newsletter #terms {
+    position: relative;
+    top: 1px;
+}
 
